<resources>
    <string name="app_name">KupleApp</string>
    <string name="mainname"><u><b>게시판이름찾기</b></u></string>
    <string name="subname"><b>가나다라마바사아자차카파하가나다라</b></string>
    <string name="nickname"><b>밤바바바밤바</b></string>
    <string name="passingimg">img</string>
    <string name="good">0</string>
    <string name="bed">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contents">Contents</string>
    <string name="title">Title</string>
    <string name="todo">TODO</string>
    <string name="writeTheTitle">글쓰기</string>
</resources>
