<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="199dp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#C2C2C2"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/kuple"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        tools:layout_editor_absoluteY="61dp"
        android:contentDescription="@string/app_name"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#C2C2C2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/nameOfcomunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainname"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/app_name"
            android:background="#C2C2C2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/serch"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical" >



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#ffe1e1">
                <com.google.android.material.tabs.TabLayout
                    app:layout_constraintLeft_toLeftOf="@id/imageSlider"
                    app:layout_constraintRight_toRightOf="@id/imageSlider"
                    app:layout_constraintBottom_toBottomOf="@+id/imageSlider"
                    android:id="@+id/tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabSelectedTextColor="#900c18"
                    app:tabTextColor="#ffffff"
                    />

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_bed"
                    android:layout_width="50dp"
                    android:layout_height="30dp"

                    android:layout_marginBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"

                    android:text="@string/bed"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/thumb_down" />

                <TextView

                    android:id="@+id/nameOfsub"
                    android:layout_width="320dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="24dp"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:text="@string/subname"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="108dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="86dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingTop="15dp"
                    android:text="@string/nickname"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameOfsub"
                    app:layout_constraintVertical_bias="0.38" />

                <com.like.LikeButton
                    android:id="@+id/thumb_up"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"


                    app:anim_scale_factor="2"
                    app:circle_end_color="@color/colorAccent"
                    app:circle_start_color="@color/colorPrimary"
                    app:dots_primary_color="@color/colorAccent"
                    app:dots_secondary_color="@color/colorPrimary"
                    app:icon_size="25dp"
                    app:icon_type="heart"
                    app:is_enabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/thumb_down"
                    app:like_drawable="@drawable/thumb_on"
                    app:liked="false"
                    app:unlike_drawable="@drawable/thumb_off">


                </com.like.LikeButton>

                <com.like.LikeButton
                    android:id="@+id/thumb_down"
                    android:layout_width="31dp"
                    android:layout_height="33dp"

                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"

                    app:anim_scale_factor="2"
                    app:circle_end_color="@color/colorAccent"

                    app:circle_start_color="@color/colorPrimary"
                    app:dots_primary_color="@color/colorAccent"

                    app:dots_secondary_color="@color/colorPrimary"
                    app:icon_size="25dp"
                    app:icon_type="Star"
                    app:is_enabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:liked="false">

                </com.like.LikeButton>

                <TextView
                    android:id="@+id/number_good"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="4dp"

                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/good"

                    android:textSize="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toStartOf="@+id/thumb_down"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/thumb_up" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>